kubernetes/helloworld/k8s/resources/deployment-pvc-localPath.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-deployment
  namespace: welcome
spec:
  selector:
    matchLabels:
      app: welcome
  template:
    metadata:
      labels:
        app: welcome
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
            requests:
              memory: "64Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/nginx.conf
              subPath: nginx.conf
            - name: data
              mountPath: /var/www/html
      volumes:
        - name: config
          configMap:
            name: welcome-config

        - name: data
          persistentVolumeClaim:
            - claimName: welcome-pvc
