kubernetes/helloworld/k8s/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-svc
  namespace: welcome
spec:
  selector:
    app: welcome-svc
  ports:
    - port: 8080
      targetPort: 80
