kubernetes/helloworld/k8s/resources/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: welcome-http-route
  namespace: welcome
spec:
  parentRefs:
    - name: shared-public-gateway
      namespace: nginx-gateway # 引用共享网关
      sectionName: http
  hostnames:
    - localhost
    - 192.168.10.69
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: welcome-svc
          port: 8080
